fixed mobile alignment

--- a/src/App.css
+++ b/src/App.css
@@ -475,15 +475,15 @@ html{
   height:25%;
   }
 #clean{
-  width:64%;
+  width:70%;
 }
 #p2descrip{
-  margin-left: 15%;
+  margin-left: 19%;
 }
 #p2{
-  margin-left: 10%;
+  margin-left: 19%;
 }
 #p1descrip{
-  margin-left: 10%;
+  margin-left: 6%;
 }
 }
